--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -39,7 +39,7 @@ body{
 	font-family: 'EB Garamond', serif;
 	font-weight: 400;
 	width: 100%;
-	height: 100%;
+	height: 150vh;
 	line-height: 23px;
 	 
 }
