--- a/templates/page3.html
+++ b/templates/page3.html
@@ -146,6 +146,26 @@
 	至於缺點呢，就是需要自己花錢丶需要六次的療程，這一點就不是每個人都方便。
 	單就足底筋膜炎而言，局部注射類固醇也很有效，又有健保給付，但是會有副作用（纖維化後造成筋膜的斷裂）以致不能太常施打。</p>
 	<img class="imgv" src="../images/IMG_3557.JPG" alt="Extracorporeal shockwave therapy">
+
+<p class="part"></p>
+
+
+	<h2 class="contentChi sec3">經脊椎神經孔之硬脊椎膜上麻醉</h2>
+	<button class="btnEN3" id="btnOut3">EN</button>
+	<div class="EN3"><p class="EN3"><b>Epidural analgesia </b> <br>
+	Pain associated with sacroiliac joint dysfunction is often seated around the lowest part of the back at the level of the pelvis and butlocks. The pain can extend down the back of the lef to the knee or into the groin area. 
+
+	Epidural analgesia provides complete motor (causing paralysis) and sensory blockade (causing loss of sensation), around or near the site of pain. The level of epidural block usually extends distal from the upper abdomen.
+
+	</p>
+		<button class="btnEN3" id="btnIn3">close</button>
+	</div>
+	<p class="contentChi">
+		<b>Epidural analgesia</b> <br>
+	
+	嚴重的背痛加上腿痛，也就是急性的坐骨神經痛，只要在背部打個針就可以止痛，這個方法在我們診所已經做了十五年，是一個相當安全而且有效地止痛方法。
+	</p>
+	<img class="imgv" src="../images/IMG_3906.JPG" alt="Extracorporeal shockwave therapy">
 </div>	
 <!-- 	<div class="titleNameChi2">	
 		<p id="GETIT2">痠 丶痲丶 痛丶頭暈丶失眠丶焦慮的專科診所</p>
@@ -153,9 +173,10 @@
  -->
 
 
+
 <br>
 </div> <!-- body id tag ends -->
 
-<footer>嗨</footer>
+
 </body>
 </html>	
