--- a/templates/page4.html
+++ b/templates/page4.html
@@ -41,7 +41,7 @@
 			<a id="treatmentbutton" href="page3.html">診療項目及門診 TREATMENTS</a>
 				<div class="dropdown-content">
 					<a href="page3.html">診療項目 TREATMENTS</a>
-					<a href="page4.html"> 醫療小知識 Mirco Blog</a>
+					<a href="page4.html#one"> 醫療小知識 Mirco Blog</a>
 				</div>
 		</div>
 	</div>
@@ -62,12 +62,16 @@
 <!-- dots -->
 
 	<ul class="dotfam">
-		<a href="#41"><li class="dot"></li></a>
-		<li class="dot"><a href="#42"></a></li>
+		<li class="dot"><a href="#one"></a></li>
+		<li class="dot"><a href="#two"></a></li>
+		<li class="dot"><a href="#three"></a></li>
+		<li class="dot"><a href="#four"></a></li>
+		<li class="dot"><a href="#five"></a></li>
+		<li class="dot"><a href="#six"></a></li>
 	</ul>
 <div class="slideshow-container">
 	<div class="Slidess fade">
-		<p id="contentChi" id="41"><b>「體重，酸痛的原因之一」</b> <br>
+		<p id="contentChi" id="one"><b>體重，酸痛的原因之一</b> <br>
 		新一代標靶式抑制食慾減重藥物屬於選擇性血清素抑制劑，作用機轉類似抗憂鬱用藥，直接作用在下視丘人類血清素5-HT2C受體，藉此達成抑制食欲效果，進而降低體重。
 		食藥署為求慎重起見，要求新一代標靶式抑制食慾減重藥必須完成台灣銜接性人體臨床試驗，為此，台大、成大、中國附醫等三醫學中心進行臨床試驗。
 		新藥仍有副作用，約兩成出現輕微頭痛、頭暈等，而藥物直接作用於大腦飽食中樞神經，長期服用，將提高血清素濃度，他建議，正在服用抗憂鬱及抗思覺失調藥物者勿服用。（文章出處中國時報丶鄭郁蓁）
@@ -76,11 +80,52 @@
 
 	</div>
 	<div class="Slidess fade">
-		<p id="contentChi" id="42"><b>「腰椎硬膜上麻醉」</b><br>
+		<p id="contentChi" id="two"><b>腰椎硬膜上麻醉</b><br>
 		十年內開了兩次刀，上次是三年前，然後這三個月又開始下背部丶腿部疼痛。吃藥也壓不住，於是做了揷了兩針止痛。
 		不痛了，接下來還是不要拿重，椅子不可以太低，而且要放上背靠，把腰撐住，避免復發。否則再開第三次，病人和醫師都受不了。
 		</p> 
 	</div>
+
+
+	<div class="Slidess fade">
+		<p id="contentChi" id="three"><b>神經受到壓迫，何時需要開刀？</b><br>神經受到壓迫時候的症狀就是痠麻痛或是無力，何時需要採取手術治療呢？ 只有兩種情況需要開刀： 一丶 開始出現無力的症狀時， 二丶 雖然已經施行各種保守治療，仍然無法解除難耐的痠麻痛症狀。<br>
+	  需要開刀的第一個情況，所謂的無力就是東西拿不起來，腳抬不高或是走路走不遠，這時候就需要開刀了。開刀之後主要是讓無力的症狀到此為止，而不是讓無力變成有力，雖然還是有極少數的人手術之後力氣會恢復，但是大多開刀之後是無力到此為止。所以有些人會等到漸漸無力，一直拖到坐輪椅時才想開刀，這時候即使是去開刀，也很難站起來，但是可以避免以後包尿布的困擾。所以只要有無力的症狀，愈早開刀愈能避免繼續無力，愈能保有現有的力量。<br>
+	  至於需要開刀的第二個情況就是痠麻痛的症狀，雖然常常讓人受不了，卻是不用急著開刀。以下的保守治療應該先去做，大多數的人都會改善而不需要開刀，只有少數人不會改善才需要開刀。 
+
+		</p> 
+	</div>
+
+	<div class="Slidess fade">
+		<p id="contentChi" id="four"><b>至於保守治療有哪些呢？</b><br>
+		
+	 1. 注意姿勢丶避免拿重物丶增強肌肉的力量。 <br>
+	 2. 復健物理治療兩個月。<br>
+	 3. 依照醫師指示服藥。<br>
+	 4. 局部注射麻醉劑或類固醇。 <br>
+	 5. 脊椎硬膜上麻醉。<br>
+	​ 6. 高瀕熱凝針止痛。 以上的保守治療還不見效的話，才需要開刀治療痠麻痛。
+	 開刀對解除痠痛緊的症狀效果十分明顯，但是對於刺麻而言，通常開完刀後得要再等一段時間才會慢慢改善。 <br>
+
+		</p> 
+	</div>
+
+	<div class="Slidess fade">
+		<p id="contentChi" id="five"><b>開刀在做什麼？</b><br>
+	 施行開刀治療神經的壓迫，主要可以達到兩個目的：一是除去壓迫神經的物件，二是若有結構不穩定的現象，開刀可以予以固定，防止神經之後又被壓迫。至於沒有明顯壓迫卻有痠麻痛，開刀的目的則是置入電極將神經通電刺激或是置入導管後，再接上幫浦把藥品打入神經週圍。
+
+		</p> 
+	</div>
+
+	<div class="Slidess fade">
+		<p id="contentChi" id="five"><b>開刀效果不錯，但是先別急</b><br>
+	 話說回來，開刀對於痠痛緊的效果不錯，為什麼不先開刀，反倒先採取上述費時費力的保守治療呢？答案是：保守治療的成功率高且安全。畢竟開刀無論多小心，還是避免不了極少數死亡或是殘癈的危險*，所以會把它放到治療的最後選項。 
+
+		</p> 
+	</div>
+
+   
+
+
 </div>  <!-- slideshow-container ends -->
 
 
